# paper-lab

./: LICENSE  README.md  pyproject.toml
src/paper_lab/paper_001/: README.md  __init__.py  const.py  layer.py  model.py
src/paper_lab/paper_001/components/: attn.py  ffn.py  pe.py  seq_mask.py
tests/paper_001/: test_forward_pass.py
tests/transformer/: forward_pass.py
