[project]
name = "paper-lab"
version = "1.0.0"
description = "Implementations, critical analysis and technical deep-dives into Legendary/SOTA AI research papers."
readme = "README.md"
authors = [
    { name = "Cuong Nguyen", email = "96775840+weecici@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.2", "torch>=2.9.0", "torchinfo>=1.8.0"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
